Bug 371273. Fire caret/selection events for movement within document when find bar is open. Also fixes MSAA caret position when user is typing/deleting text, and moves MSAA specific code out of cross platform code area. r=surkov