accessible/src/base/nsCaretAccessible.cpp
@@ -56,35 +56,37 @@
 NS_IMPL_ISUPPORTS_INHERITED2(nsCaretAccessible, nsLeafAccessible, nsIAccessibleCaret, nsISelectionListener)
 
 nsCaretAccessible::nsCaretAccessible(nsIDOMNode* aDocumentNode, nsIWeakReference* aShell, nsRootAccessible *aRootAccessible):
-nsLeafAccessible(aDocumentNode, aShell), mVisible(PR_TRUE), mLastCaretOffset(-1), mLastNodeWithCaret(nsnull),
-mSelectionControllerNode(nsnull), mRootAccessible(aRootAccessible)
+nsLeafAccessible(aDocumentNode, aShell), mLastCaretOffset(-1), mLastNodeWithCaret(nsnull),
+mCurrentControl(nsnull), mRootAccessible(aRootAccessible)
 {
 }
 
 NS_IMETHODIMP nsCaretAccessible::Shutdown()
 {
-  mDomSelectionWeak = nsnull;
+  // The caret accessible isn't shut down until the nsRootAccessible owning it is shut down
+  // Each nsDocAccessible, including the nsRootAccessible, is responsible for clearing the
+  // doc selection listeners they registeed in this nsCaretAccessible
+  ClearControlSelectionListener(); // Clear the selection listener for the currently focused control
   mLastNodeWithCaret = nsnull;
-  mSelectionControllerNode = nsnull;
-  RemoveSelectionListener();
+  mLastUsedSelection = nsnull;
   
   return nsLeafAccessible::Shutdown();
 }
 
-NS_IMETHODIMP nsCaretAccessible::RemoveSelectionListener()
+NS_IMETHODIMP nsCaretAccessible::ClearControlSelectionListener()
 {
-  nsCOMPtr<nsISelection> prevDomSel(do_QueryReferent(mDomSelectionWeak));
-  nsCOMPtr<nsISelectionPrivate> selPrivate(do_QueryInterface(prevDomSel));
+  nsCOMPtr<nsISelectionPrivate> selPrivate(do_QueryReferent(mCurrentControlSelection));
   if (selPrivate) {
-    mDomSelectionWeak = nsnull;
+    mCurrentControlSelection = nsnull;
+    mCurrentControl = nsnull;
     return selPrivate->RemoveSelectionListener(this);
   }
   return NS_OK;
 }
 
-NS_IMETHODIMP nsCaretAccessible::AttachNewSelectionListener(nsIDOMNode *aCurrentNode)
+NS_IMETHODIMP nsCaretAccessible::SetControlSelectionListener(nsIDOMNode *aCurrentNode)
 {
-  mSelectionControllerNode = aCurrentNode;
+  mCurrentControl = aCurrentNode;
   mLastNodeWithCaret = nsnull;
 
   // When focus moves such that the caret is part of a new frame selection
@@ -95,87 +97,74 @@ NS_IMETHODIMP nsCaretAccessible::AttachNewSelectionListener(nsIDOMNode *aCurrent
     return NS_ERROR_FAILURE;
 
   nsCOMPtr<nsIDocument> doc = presShell->GetDocument();
-  if (!doc)  // we also should try to QI to document instead (necessary to do when node is a document)
-    doc = do_QueryInterface(aCurrentNode);
+  NS_ENSURE_TRUE(doc, NS_ERROR_FAILURE);
+
   nsCOMPtr<nsIContent> content(do_QueryInterface(aCurrentNode));
-  if (!content)
-    content = doc->GetRootContent();  // If node is not content, use root content
+  // The control selection listener is only for form controls, not for the document
+  // When there is no document, the content will be null
+  if (!content) {
+    return NS_OK;
+  }
 
   nsIFrame *frame = presShell->GetPrimaryFrameFor(content);
+  NS_ENSURE_TRUE(frame, NS_ERROR_FAILURE);
+
   nsPresContext *presContext = presShell->GetPresContext();
-  if (!frame || !presContext)
-    return NS_ERROR_FAILURE;
+  NS_ENSURE_TRUE(presContext, NS_ERROR_FAILURE);
 
   nsCOMPtr<nsISelectionController> selCon;
   frame->GetSelectionController(presContext, getter_AddRefs(selCon));
-  if (!selCon)
-    return NS_ERROR_FAILURE;
+  NS_ENSURE_TRUE(selCon, NS_ERROR_FAILURE);
   
-  nsCOMPtr<nsISelection> domSel, prevDomSel(do_QueryReferent(mDomSelectionWeak));
+  nsCOMPtr<nsISelection> domSel;
   selCon->GetSelection(nsISelectionController::SELECTION_NORMAL, getter_AddRefs(domSel));
-  if (domSel == prevDomSel)
-    return NS_OK; // This is already the selection we're listening to
-  RemoveSelectionListener();
+
+  ClearControlSelectionListener();
   nsCOMPtr<nsISelectionPrivate> selPrivate(do_QueryInterface(domSel));
+  NS_ENSURE_TRUE(selPrivate, NS_ERROR_FAILURE);
 
-  if (!selPrivate)
-    return NS_ERROR_FAILURE;
-
-  mDomSelectionWeak = do_GetWeakReference(domSel);
+  mCurrentControlSelection = do_GetWeakReference(domSel);
   return selPrivate->AddSelectionListener(this);
+}
+
+NS_IMETHODIMP nsCaretAccessible::AddDocSelectionListener(nsIDOMDocument *aDoc)
+{
+  nsCOMPtr<nsIDocument> doc = do_QueryInterface(aDoc);
+  NS_ENSURE_TRUE(doc, NS_ERROR_FAILURE);
+  nsCOMPtr<nsISelectionController> selCon = do_QueryInterface(doc->GetPrimaryShell());
+  NS_ENSURE_TRUE(selCon, NS_ERROR_FAILURE);
+
+  nsCOMPtr<nsISelection> domSel;
+  selCon->GetSelection(nsISelectionController::SELECTION_NORMAL, getter_AddRefs(domSel));
+  nsCOMPtr<nsISelectionPrivate> selPrivate = do_QueryInterface(domSel);
+  NS_ENSURE_TRUE(selPrivate, NS_ERROR_FAILURE);
+
+  return selPrivate->AddSelectionListener(this);
+}
+
+NS_IMETHODIMP nsCaretAccessible::RemoveDocSelectionListener(nsIDOMDocument *aDoc)
+{
+  nsCOMPtr<nsIDocument> doc = do_QueryInterface(aDoc);
+  NS_ENSURE_TRUE(doc, NS_ERROR_FAILURE);
+
+  nsCOMPtr<nsISelectionController> selCon = do_QueryInterface(doc->GetPrimaryShell());
+  NS_ENSURE_TRUE(selCon, NS_ERROR_FAILURE);
+
+  nsCOMPtr<nsISelection> domSel;
+  selCon->GetSelection(nsISelectionController::SELECTION_NORMAL, getter_AddRefs(domSel));
+  nsCOMPtr<nsISelectionPrivate> selPrivate = do_QueryInterface(domSel);
+  NS_ENSURE_TRUE(selPrivate, NS_ERROR_FAILURE);
+
+  return selPrivate->RemoveSelectionListener(this);
 }
 
 NS_IMETHODIMP nsCaretAccessible::NotifySelectionChanged(nsIDOMDocument *aDoc, nsISelection *aSel, PRInt16 aReason)
 {
-  nsCOMPtr<nsIPresShell> presShell = GetPresShellFor(mSelectionControllerNode);
-  nsCOMPtr<nsISelection> domSel(do_QueryReferent(mDomSelectionWeak));
-  if (!presShell || domSel != aSel)
-    return NS_OK;  // Only listening to selection changes in currently focused frame
+  mLastUsedSelection = do_GetWeakReference(aSel);
 
-  nsCOMPtr<nsICaret> caret;
-  presShell->GetCaret(getter_AddRefs(caret));
-  if (!caret)
-    return NS_OK;
-
-  nsRect caretRect;
-  PRBool isCollapsed;
-  caret->GetCaretCoordinates(nsICaret::eTopLevelWindowCoordinates, domSel,
-                             &caretRect, &isCollapsed, nsnull);
-  PRBool visible = !caretRect.IsEmpty();
-  if (visible)  // Make sure it's visible both by looking at coordinates and visible flag
-    caret->GetCaretVisible(&visible);
-  if (visible != mVisible) {
-    mVisible = visible;
-#ifdef XP_WIN
-    mRootAccessible->FireToolkitEvent(mVisible? nsIAccessibleEvent::EVENT_SHOW: 
-                                      nsIAccessibleEvent::EVENT_HIDE, this, nsnull);
-#endif
-  }
-
-#ifdef XP_WIN
-  // Support old style MSAA caret move events, which utilize screen coodinates
-  // rather than position within the text
-  nsPresContext *presContext = presShell->GetPresContext();
-  nsIViewManager* viewManager = presShell->GetViewManager();
-  if (!presContext || !viewManager)
-    return NS_OK;
-  nsIView *view = nsnull;
-  viewManager->GetRootView(view);
-  if (!view)
-    return NS_OK;
-  nsIWidget* widget = view->GetWidget();
-  if (!widget)
-    return NS_OK;
-
-  caretRect.x      = presContext->AppUnitsToDevPixels(caretRect.x);
-  caretRect.y      = presContext->AppUnitsToDevPixels(caretRect.y);
-  caretRect.width  = presContext->AppUnitsToDevPixels(caretRect.width);
-  caretRect.height = presContext->AppUnitsToDevPixels(caretRect.height);
-
-  widget->WidgetToScreen(caretRect, mCaretRect);
-
-  mRootAccessible->FireToolkitEvent(nsIAccessibleEvent::EVENT_LOCATION_CHANGE, this, nsnull);
-#endif
+  nsCOMPtr<nsIDocument> doc = do_QueryInterface(aDoc);
+  nsIPresShell *presShell = doc->GetPrimaryShell();
+  NS_ENSURE_TRUE(presShell, NS_OK);
 
   // Get first nnsIAccessibleText in parent chain and fire caret-move, selection-change event for it
   nsCOMPtr<nsIAccessible> accessible;
@@ -183,7 +172,7 @@ NS_IMETHODIMP nsCaretAccessible::NotifySelectionChanged(nsIDOMDocument *aDoc, ns
   NS_ENSURE_TRUE(accService, NS_ERROR_FAILURE);
   // Get accessible from selection's focus node or its parent
   nsCOMPtr<nsIDOMNode> focusNode;
-  domSel->GetFocusNode(getter_AddRefs(focusNode));
+  aSel->GetFocusNode(getter_AddRefs(focusNode));
   if (!focusNode) {
     mLastNodeWithCaret = nsnull;
     return NS_OK; // No selection
@@ -230,16 +219,72 @@ NS_IMETHODIMP nsCaretAccessible::NotifySelectionChanged(nsIDOMDocument *aDoc, ns
                                                   focusNode, nsnull, PR_FALSE);
 }
 
-/** Return the caret's bounds */
-NS_IMETHODIMP nsCaretAccessible::GetBounds(PRInt32 *x, PRInt32 *y, PRInt32 *width, PRInt32 *height)
+already_AddRefed<nsICaret>
+nsCaretAccessible::GetLastCaret(nsRect *aRect, PRBool *aIsVisible)
 {
-  if (mCaretRect.IsEmpty()) {
+  *aIsVisible = PR_FALSE;
+  if (!mLastNodeWithCaret) {
+    return nsnull;
+  }
+
+  nsCOMPtr<nsIPresShell> presShell = GetPresShellFor(mLastNodeWithCaret);
+  NS_ENSURE_TRUE(presShell, nsnull);
+
+  nsICaret *caret;
+  presShell->GetCaret(&caret);
+  NS_ENSURE_TRUE(caret, nsnull);
+
+  nsRect caretRect;
+  PRBool isCollapsed;
+  nsCOMPtr<nsISelection> caretSelection(do_QueryReferent(mLastUsedSelection));
+  caret->GetCaretCoordinates(nsICaret::eTopLevelWindowCoordinates, caretSelection,
+                             aRect, &isCollapsed, nsnull);
+  if (!aRect->IsEmpty()) {
+    caret->GetCaretVisible(aIsVisible);
+  }
+  return caret;
+}
+
+/** Return the caret's bounds */
+NS_IMETHODIMP nsCaretAccessible::GetBounds(PRInt32 *aX, PRInt32 *aY, PRInt32 *aWidth, PRInt32 *aHeight)
+{
+  *aX = *aY = *aWidth = *aHeight = 0;
+  nsRect caretRect;
+  PRBool isVisible;
+  nsCOMPtr<nsICaret> caret = GetLastCaret(&caretRect, &isVisible);
+  if (!caret || caretRect.IsEmpty()) {
     return NS_ERROR_FAILURE;
   }
-  *x = mCaretRect.x;
-  *y = mCaretRect.y;
-  *width = mCaretRect.width;
-  *height = mCaretRect.height;
+
+  nsCOMPtr<nsIPresShell> presShell = GetPresShellFor(mLastNodeWithCaret);
+  NS_ENSURE_TRUE(presShell, NS_ERROR_FAILURE);
+
+  nsPresContext *presContext = presShell->GetPresContext();
+  NS_ENSURE_TRUE(presContext, NS_ERROR_FAILURE);
+
+  nsIViewManager* viewManager = presShell->GetViewManager();
+  NS_ENSURE_TRUE(viewManager, NS_ERROR_FAILURE);
+
+  nsIView *view = nsnull;
+  viewManager->GetRootView(view);
+  NS_ENSURE_TRUE(view, NS_ERROR_FAILURE);
+
+  nsIWidget* widget = view->GetWidget();
+  NS_ENSURE_TRUE(widget, NS_ERROR_FAILURE);
+
+  caretRect.x      = presContext->AppUnitsToDevPixels(caretRect.x);
+  caretRect.y      = presContext->AppUnitsToDevPixels(caretRect.y);
+  caretRect.width  = presContext->AppUnitsToDevPixels(caretRect.width);
+  caretRect.height = presContext->AppUnitsToDevPixels(caretRect.height);
+
+  nsRect caretScreenRect;
+  widget->WidgetToScreen(caretRect, caretScreenRect);
+
+  *aX = caretScreenRect.x;
+  *aY = caretScreenRect.y;
+  *aWidth = caretScreenRect.width;
+  *aHeight = caretScreenRect.height;
+
   return NS_OK;
 }
 
@@ -252,10 +297,21 @@ NS_IMETHODIMP nsCaretAccessible::GetRole(PRUint32 *_retval)
 NS_IMETHODIMP
 nsCaretAccessible::GetState(PRUint32 *aState, PRUint32 *aExtraState)
 {
+  *aState = 0;
   if (aExtraState)
     *aExtraState = 0;
 
-  *aState = mVisible? 0: nsIAccessibleStates::STATE_INVISIBLE;
+  NS_ENSURE_TRUE(mLastNodeWithCaret, NS_ERROR_FAILURE);
+
+  nsCOMPtr<nsIPresShell> presShell = GetPresShellFor(mLastNodeWithCaret);
+  NS_ENSURE_TRUE(presShell, NS_ERROR_FAILURE);
+
+  nsRect caretRect;
+  PRBool isVisible;
+  GetLastCaret(&caretRect, &isVisible);
+  if (!isVisible) {
+    *aState = nsIAccessibleStates::STATE_INVISIBLE;
+  }
   return NS_OK;
 }
 
