accessible/src/base/nsCaretAccessible.h
@@ -49,11 +49,23 @@ class nsRootAccessible;
 
 /*
  * This special accessibility class is for the caret, which is really the currently focused selection.
- * There is only 1 visible caret per top level window (nsRootAccessible)
+ * There is only 1 visible caret per top level window (nsRootAccessible),
+ * However, there may be several visible selections.
+ *
+ * The important selections are the one owned by each document, and the one in the currently focused control.
+ *
  * The caret accesible does not exist within the normal accessible tree; it lives in a different world.
  * In MSAA, it is retrieved with via the WM_GETOBJECT message with lParam = OBJID_CARET, 
  * (as opposed to the root accessible tree for a window which is retrieved with OBJID_CLIENT)
+ * In ATK, the caret accessible is never exposed as an accessible object, but is used to fire
+ * caret move and selection change events.
+ *
  * The caret accessible is owned by the nsRootAccessible for the top level window that it's in.
+ * The nsRootAccessible needs to tell the nsCaretAccessible about focus changes via
+ * setControlSelectionListener().
+ * Each nsDocAccessible needs to tell the nsCaretAccessible owned by the root to
+ * listen for selection events via addDocSelectionListener() and then needs to remove the 
+ * selection listener when the doc goes away via removeDocSelectionListener().
  */
 
 class nsCaretAccessible : public nsLeafAccessible, public nsIAccessibleCaret, public nsISelectionListener
@@ -72,9 +84,8 @@ public:
   NS_IMETHOD GetPreviousSibling(nsIAccessible **_retval);
 
   /* ----- nsIAccessibleCaret ------ */
-  NS_IMETHOD AttachNewSelectionListener(nsIDOMNode *aFocusedNode);
-  NS_IMETHOD RemoveSelectionListener();
-
+  NS_DECL_NSIACCESSIBLECARET
+  
   /* ----- nsISelectionListener ---- */
   NS_DECL_NSISELECTIONLISTENER
 
@@ -89,15 +100,22 @@ public:
   NS_IMETHOD Shutdown();
 
 private:
-  nsRect mCaretRect;
-  PRBool mVisible;
-  PRInt32 mLastCaretOffset;
+  // The currently focused control -- never a document.
+  // We listen to selection for one control at a time (the focused one)
+  // Document selection is handled separately via additional listeners on all active documents
+  // The current control is set via SetControlSelectionListener()
+  nsCOMPtr<nsIDOMNode> mCurrentControl;  // Selection controller for the currently focused control
+  nsCOMPtr<nsIWeakReference> mCurrentControlSelection;
+
+  // Info for the the last selection event
+  // If it was on a control, then mLastUsedSelection == mCurrentControlSelection
+  // Otherwise, it's for a document where the selection changed
+  nsCOMPtr<nsIWeakReference> mLastUsedSelection; // Weak ref to nsISelection
   nsCOMPtr<nsIDOMNode> mLastNodeWithCaret;
-  nsCOMPtr<nsIDOMNode> mSelectionControllerNode;
-  // mListener is not a com pointer. It's a copy of the listener in the nsRootAccessible owner. 
-  //See nsRootAccessible.h for details of the lifetime if this listener
+  PRInt32 mLastCaretOffset;
+  already_AddRefed<nsICaret> GetLastCaret(nsRect *aRect, PRBool *aIsVisible);
+
   nsRootAccessible *mRootAccessible;
-  nsCOMPtr<nsIWeakReference> mDomSelectionWeak;
 };
 
 #endif
